--- a/Client/Containers/ContainerSettings.razor
+++ b/Client/Containers/ContainerSettings.razor
@@ -24,7 +24,7 @@
         try
         {
 
-            _title = SettingService.GetSetting(ModuleState.Settings, KeyShowTitle, "true");
+            _title = SettingService.GetSetting(ModuleState.Settings, MyContainerSettings.KeyShowTitle, "true");
 
         }
         catch (Exception ex)
@@ -38,7 +38,7 @@
         try
         {
 			var settings = await SettingService.GetModuleSettingsAsync(ModuleState.ModuleId);
-            settings = SettingService.SetSetting(settings, KeyShowTitle, _title);
+            settings = SettingService.SetSetting(settings, MyContainerSettings.KeyShowTitle, _title);
             await SettingService.UpdateModuleSettingsAsync(settings, ModuleState.ModuleId);
         }
         catch (Exception ex)
