--- a/Client/src/styles/styles.scss
+++ b/Client/src/styles/styles.scss
@@ -74,9 +74,11 @@
 @import "utils/print";*/
 
 @import "components/base-layout";
+@import "components/footer";
 @import "components/layout-centered";
 @import "components/layout-default";
 @import "components/layout-fullscreen";
+
 
 
 
